<resources>
    <string name="app_name">Rumble</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="my_blog">My Blog</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search">Search</string>
    <string name="view_post">View Post</string>
    <string name="test">Test</string>
    <string name="stop">Stop</string>
    <string name="difference">Difference</string>
</resources>
